make gestured desktop switching use natural directions

BUG: 185710